--- a/views/pages/patient.ejs
+++ b/views/pages/patient.ejs
@@ -40,7 +40,7 @@
 					<input class="input" type="hidden" name="patient_id" value="<%= patient.id %>">
 					<input class="input record-title"	 type="text" placeholder="Record Title" name="title" required>
 					<textarea id="textarea" class="input"placeholder="Description" name="description" required></textarea>
-					<button class="submit">Submit</button>
+					<button class="submit submit-center">Submit</button>
 				</form>
 			</div>
 		</div>
