--- a/views/pages/patient.ejs
+++ b/views/pages/patient.ejs
@@ -69,7 +69,7 @@
 
 		<form id="delete" action="/patient/<%= patient.id %>" method="POST">
 			<input type="hidden" name="_method" value="DELETE">
-			<button class="submit">Delete Patient</button>
+			<button class="submit submit-center">Delete Patient</button>
 		</form>
 	</div>
 	<script src="/scripts/delete.js"></script>
