--- a/views/pages/patient.ejs
+++ b/views/pages/patient.ejs
@@ -18,7 +18,7 @@
 	<div class="patient-container">
 		<div class="patient-detail-container">
 			<div class="one">
-				<h3>Patient Details:</h3>
+				<h3>Patient Name:</h3>
 				<p>
 					<%= patient.last_name %>,
 					<%= patient.first_name %>
