--- a/views/pages/recordDetail.ejs
+++ b/views/pages/recordDetail.ejs
@@ -6,8 +6,8 @@
   <% if (added) { %>
     <p>Record successfully added!</p>
   <% } %>
-  <main class="recordD-main">
-    <a class="submit back" href="/patient/<%= patient_id %>">← Back</a>
+  <a class="submit back" href="/patient/<%= patient_id %>">← Back</a>
+  <main class="rd-main">
     <section id="details">
       <span><%= record.date %></span>
       <h2><%= record.title %></h2>
