--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <%- include('../partials/head', {title: 'Med Words'}); %>
   <body>
-    <%- include('../partials/header'); %>
+    <%- include('../partials/header', {location: 'about'}); %>
 
     <main class="site-content">
       <div class="page-header">
