--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,8 +4,14 @@
   </div></a>
   <nav>
     <ul>
+      <% if (location === 'home') { %>
       <li><a href="/patient" class="active">home</a></li>
       <li><a href="/about">about us</a></li>
+      <% } else { %>
+      <li><a href="/patient">home</a></li>
+      <li><a href="/about" class="active">about us</a></li>
+
+      <% } %>
     </ul>
   </nav>
   <div class="menu-toggle menu-toggle-one"><i class="fa fa-bars" aria-hidden="true"></i></div>
