Updated all header partials

--- a/views/pages/keyPhrases.ejs
+++ b/views/pages/keyPhrases.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <%- include('../partials/head', {title: 'Key Phrases'}); %>
 <body>
-  <%- include('../partials/header'); %>
+  <%- include('../partials/header', {location: 'patient'}); %>
   <a class="submit back" href="/patient/<%= patient_id %>">← Back</a>
   <h1 class="keyword-header">Key Phrases:</h1>
   <main class="kp-main">
