--- a/views/pages/patient.ejs
+++ b/views/pages/patient.ejs
@@ -3,7 +3,7 @@
 <%- include('../partials/head', {title: 'Patient Detail'}); %>
 
 <body>
-	<%- include('../partials/header'); %>
+	<%- include('../partials/header', {location: 'patient'}); %>
 
 	<% if (added) { %>
 	<p>Patient successfully added!</p>
