--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,12 +5,14 @@
   <nav>
     <ul>
       <% if (location === 'home') { %>
-      <li><a href="/patient" class="active">home</a></li>
-      <li><a href="/about">about us</a></li>
+        <li><a href="/patient" class="active">home</a></li>
+        <li><a href="/about">about us</a></li>
+      <% } else if (location === 'about') { %>
+        <li><a href="/patient">home</a></li>
+        <li><a href="/about" class="active">about us</a></li>
       <% } else { %>
-      <li><a href="/patient">home</a></li>
-      <li><a href="/about" class="active">about us</a></li>
-
+        <li><a href="/patient">home</a></li>
+        <li><a href="/about">about us</a></li>
       <% } %>
     </ul>
   </nav>
