--- a/views/pages/recordDetail.ejs
+++ b/views/pages/recordDetail.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <%- include('../partials/head', {title: 'Record Detail'}); %>
 <body>
-  <%- include('../partials/header'); %>
+  <%- include('../partials/header', {location: 'patient'}); %>
   <% if (added) { %>
     <p>Record successfully added!</p>
   <% } %>
