--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
   </div></a>
   <nav>
     <ul>
-      <li><a href="/patient" class="active">home</a></li>
+      <li><a href="/patient" class="active-red">home</a></li>
       <li><a href="/about">about us</a></li>
     </ul>
   </nav>
