--- a/views/pages/patient.ejs
+++ b/views/pages/patient.ejs
@@ -12,9 +12,8 @@
 	<% if (deleted) { %>
 	<p>Record successfully deleted!</p>
 	<% } %>
-<main>
+<main class="p-main">
 	
-</main>
 	<div class="patient-container">
 		<div class="patient-detail-container">
 			<div class="one">
@@ -72,6 +71,7 @@
 			<button class="submit submit-center">Delete Patient</button>
 		</form>
 	</div>
+</main>
 	<script src="/scripts/delete.js"></script>
 	<%- include('../partials/footer'); %>
 </body>
