cleaned up CSS a little bit

--- a/public/styles/state.css
+++ b/public/styles/state.css
@@ -1,17 +1,4 @@
-header nav ul li .sub-menu:before {
-  content: "\f0d7";
-  font-family: fontAwesome;
-  line-height: 50px;
-  color: #fff;
-  right: 5px;
-}
-
-header nav ul li.active .sub-menu:before {
-  content: "\f0d8";
-}
-
-header nav ul li a:hover,
-header nav ul li a.active {
+header nav ul li a:hover, header nav ul li a.active {
   color: #fff;
   background: #E80000;
 }
