--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -2,12 +2,14 @@ h2{
   font-family: 'Graduate', cursive;
 }
 
-header .logo   {
+.logo   {
   color: #fff;
   height: 50px;
   line-height: 50px;
   font-size: 24px;
   font-weight: bold;
+  float: left;
+  margin-left: 1%;
 }
 
 header nav ul {
