--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -23,10 +23,30 @@
 
       
       <section class="image-container" id="about-us">
-        <div class="team-image tre"></div>
-        <div class="team-image jeff"></div>
-        <div class="team-image ken"></div>
-        <div class="team-image aaron"></div>
+        <div class="team-card">
+          <div class="team-image tre"></div>
+          <h3>Tre Cain</h3>
+          <a href="https://github.com/ercain03"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/earnest-cain/"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <div class="team-card">
+          <div class="team-image jeff"></div>
+          <h3>Jeff Weng</h3>
+          <a href="https://github.com/Inkh"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/jeffreyhweng/"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <div class="team-card">
+          <div class="team-image ken"></div>
+          <h3>Kendra Ellis</h3>
+          <a href="https://github.com/ellisken"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/kendra-ellis/"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <div class="team-card">
+          <div class="team-image aaron"></div>
+          <h3>Aaron Frank</h3>
+          <a href="https://github.com/afrank41"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/aaron-frank/"><i class="fab fa-linkedin"></i></a>
+        </div>
       </section>
     </main>
     <%- include('../partials/footer'); %>
