--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -127,6 +127,12 @@ input #patient-id {
 }
 
 @media (max-width: 991px) {
+
+  .site-content {
+    width: 90%;
+    margin: 0 auto;
+  }
+
   header {
     padding: 0 20px;
   }
