fixed hamburger menu display in mobile view

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -144,6 +144,10 @@ input #patient-id {
   .menu-toggle {
     display: block;
   }
+
+  .menu-toggle-two {
+    display: none;
+  }
   
   header nav {
     position: absolute;
