Fixed social media link colors

--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -259,6 +259,10 @@ ul li a:hover {
   font-size: 2em;
 }
 
+.team-card a {
+  color: black;
+}
+
 .team-card a:visited {
   text-decoration: none;
   color: black;
