--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,9 @@
   <section id="lab_social_icon_footer">
     <div class="container">
       <div class="text-center center-block">
+        <!-- mailto:# is not a real thing. What's supposed to be here? -->
         <a href="mailto:#"><i id="social-em" class="fa far fa-envelope fa-3x social"></i>|</a>
+        <!-- Super nitpicky code-styling feedback: either make this div one line, or make everything separate lines. -->
         <div class="footer-logo">MED <i class="watermellon fa fa-medkit"></i>
           WORDS
         </div>
