--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,6 +2,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- These styles and scripts are in a hodgepodge order. I'd recommend:
+    - external fonts
+    - external CSS
+    - external JS
+    - internal CSS
+    - internal JSS
+    - the icons
+    In particular, it's better to link in a font before linking in the stylesheet that uses that font.
+    -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/assets/favicon.ico" type="image/x-icon"> 
